# nano

./: 0002-use-futimens-if-available-instead-of-utime.patch  0003-Document-the-poslog-P-option-in-nano.1-man-page.patch  Makefile  README.md  nano.spec
src/: Makefile.am  Makefile.in  configure  configure.ac  nano.spec
src/doc/man/: nano.1.html  nanorc.5.html  rnano.1.html
src/doc/man/fr/: nano.1.html  nanorc.5.html  rnano.1.html
src/doc/syntax/: Makefile.in
src/po/: ChangeLog  es.po  fr.po  it.po  nano.pot  nb.po
src/src/: browser.c  files.c  global.c  help.c  nano.c  nano.h  prompt.c  proto.h  rcfile.c  search.c  text.c  winio.c
