## $Id: Makefile.am 4161 2007-08-23 04:34:35Z dolorous $
AUTOMAKE_OPTIONS = gnu no-dependencies

SUBDIRS = doc m4 po src

EXTRA_DIST = ABOUT-NLS AUTHORS BUGS COPYING COPYING.DOC ChangeLog \
		INSTALL NEWS README README.CVS THANKS TODO UPGRADE \
		config.rpath install-sh missing mkinstalldirs nano.spec

ACLOCAL_AMFLAGS = -I m4
